# fallow

./: .clippy.toml  .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  .plowrc.json  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  deny.toml  package-lock.json  package.json  plugin-schema.json  rule-pack-schema.json  schema.json
crates/api/: Cargo.toml
crates/api/src/: analysis_context.rs  audit_keys.rs  audit_output.rs  combined_output.rs  compact_output.rs  dead_code_codeclimate.rs  dead_code_sarif.rs  decision_surface.rs  dupes_output.rs  duplication_filters.rs  editor.rs  explain.rs  grouped_output.rs  health_codeclimate.rs  json_output.rs  lib.rs  list_output.rs  list_runtime.rs  markdown_output.rs  next_steps.rs  output_contracts.rs  review_deltas.rs  routing.rs  runtime_json.rs  runtime_output.rs  sarif_output.rs  security_output.rs
crates/api/src/runtime/: audit.rs  dead_code.rs  decision_surface.rs  duplication.rs  feature_flags.rs  mod.rs  tests.rs  trace.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: programmatic_commands.rs  representative_sources.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/benches/: allocations.rs  analysis.rs  helpers.rs  large_analysis.rs  scaling_analysis.rs
crates/core/data/: security_matchers.toml  tooling.toml
crates/core/src/: cache.rs  changed_files.rs  churn.rs  cross_reference.rs  errors.rs  external_style_usage.rs  extract.rs  git_env.rs  lib.rs  package_assets.rs  progress.rs  results.rs  spawn.rs  suppress.rs  trace.rs  trace_chain.rs
crates/core/src/analyze/: boundary.rs  boundary_coverage.rs  duplicate_prop_shape.rs  dynamic_segment_name_conflict.rs  feature_flags.rs  iconify.rs  invalid_client_exports.rs  misplaced_directive.rs  mixed_barrel.rs  mod.rs  package_json_utils.rs  prop_drilling.rs  re_export_cycles.rs  react_intel.rs  react_resolve.rs  render_fan_in.rs  route_collision.rs  server_only.rs  test_support.rs  thin_wrapper.rs  unprovided_inject.rs  unrendered_component.rs  unused_catalog.rs  unused_component_emit.rs  unused_component_input.rs  unused_component_output.rs  unused_component_prop.rs  unused_deps.rs  unused_exports.rs  unused_files.rs  unused_load_data_key.rs  unused_members.rs  unused_overrides.rs  unused_server_action.rs  unused_svelte_event.rs
crates/core/src/discover/: entry_points.rs  infrastructure.rs  mod.rs  parse_scripts.rs  walk.rs
crates/core/src/duplicates/: cache.rs  deepdive.rs  families.rs  mod.rs  normalize.rs  shingle_filter.rs  token_types.rs  token_visitor.rs  types.rs
crates/core/src/plugins/: adonis.rs  angular.rs  babel.rs  bun.rs  commit_and_tag_version.rs  config_parser.rs  contentlayer.rs  cypress.rs  danger.rs  docusaurus.rs  drizzle.rs  electron.rs  ember.rs  eslint.rs  fumadocs.rs  gatsby.rs  hardhat.rs  jest.rs  k6.rs  lexical.rs  lit.rs  mintlify.rs  mod.rs  napi_rs.rs  nestjs.rs  nextjs.rs  nuxt.rs  nx.rs  obsidian.rs  oxlint.rs  pandacss.rs  pinia.rs  pkg_utils.rs  playwright.rs  pnpm.rs  postcss.rs  prettier.rs  prisma.rs  react_compiler.rs  react_router.rs  (+26 more)
crates/core/src/scripts/: mod.rs  shell.rs
crates/core/tests/: dupes_profile.rs  dupes_stress_test.rs  integration_test.rs
crates/core/tests/integration_test/: angular_ng_package.rs  angular_template_members.rs  angular_unrendered_component.rs  arrow_wrapped_imports.rs  astro_template_map_class_member.rs  astro_unrendered_component.rs  astro_unused_component_prop.rs  barrel_exports.rs  basic_analysis.rs  bin_script_deps.rs  boundary_violations.rs  caching.rs  capability_e_route_exports.rs  common.rs  config_file_loading.rs  css_in_js_styled.rs  css_modules.rs  css_modules_unused.rs  dependencies.rs  duplicate_prop_shape.rs  duplicates.rs  dynamic_import_then.rs  dynamic_imports.rs  e8_symbol_chain.rs  ember_classic.rs  entry_export_validation.rs  external_plugins.rs  extraction.rs  false_positive_fixes.rs  framework_convention_coverage_astro_gatsby.rs  framework_convention_coverage_common.rs  framework_convention_coverage_docusaurus.rs  framework_convention_coverage_electron.rs  framework_convention_coverage_expo_tanstack.rs  framework_convention_coverage_mintlify.rs  framework_convention_coverage_router.rs  framework_convention_coverage_vitepress.rs  frameworks.rs  graph_cache_transparency.rs  graphql_imports.rs  (+136 more)
crates/engine/: Cargo.toml
crates/engine/src/: baseline.rs  changed_files.rs  churn.rs  codeowners.rs  core_backend.rs  cross_reference.rs  css.rs  dead_code.rs  discover.rs  duplicates.rs  error.rs  feature_flags.rs  flags.rs  git_env.rs  lib.rs  module_graph.rs  plugins.rs  project_config.rs  public_api.rs  results.rs  security.rs  session.rs  source.rs  suppress.rs  trace.rs  trace_chain.rs  vital_signs.rs
crates/engine/src/health/: actions.rs  analysis_data.rs  assembly.rs  baseline_io.rs  churn_file.rs  component_rollup.rs  core_pipeline.rs  (+35 more)
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs  params.rs
crates/mcp/tests/: version.rs
crates/napi/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.mjs
crates/napi/src/: lib.rs
crates/napi/types/: index.d.ts
crates/output/: Cargo.toml
crates/output/src/: audit_brief.rs  audit_decision_surface.rs  audit_focus.rs  audit_routing.rs  audit_walkthrough.rs  audit_weakening.rs  check.rs  ci_output.rs  codeclimate.rs  coverage_envelopes.rs  diff.rs  dupes.rs  feature_flags.rs  fix.rs  health.rs  health_actions.rs  health_coverage.rs  health_coverage_gaps.rs  health_coverage_intelligence.rs  health_css.rs  health_diagnostics.rs  health_findings.rs  health_grouped.rs  health_report.rs  health_runtime_coverage.rs  health_scores.rs  health_targets.rs  health_trends.rs  health_vital_signs.rs  impact.rs  inspect_envelopes.rs  issue_contract.rs  json_paths.rs  lib.rs  list_envelopes.rs  next_steps.rs  report_contract.rs  review_envelopes.rs  root_envelopes.rs  sarif.rs  (+3 more)
editors/zed/: Cargo.toml  LICENSE  README.md  extension.toml
editors/zed/src/: plow.rs
(+1239 files in other folders)
