[package]
name = "plow-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Programmatic API contract types for plow"
readme = "../../README.md"

[lib]
doctest = false

[dependencies]
plow-config = { workspace = true }
plow-engine = { workspace = true }
plow-output = { workspace = true }
plow-types = { workspace = true }
dunce = { workspace = true }
globset = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }
xxhash-rust = { workspace = true }

[features]
schema = ["dep:schemars", "plow-engine/schema", "plow-output/schema", "plow-types/schema"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
