[package]
name = "plow-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP server for plow codebase intelligence (exposes plow as typed tools to AI agents)"
readme = "../../README.md"

[[bin]]
name = "plow-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["transport-io"] }
tokio.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
schemars.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
regex.workspace = true

[lints]
workspace = true
