[package]
name = "plow-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Node.js bindings for plow: deterministic codebase intelligence (quality, risk, duplication, architecture, dependencies, cleanup) for TypeScript and JavaScript"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
plow-cli = { workspace = true }
napi = { version = "3", features = ["serde-json", "tokio_rt"] }
napi-derive = "3"
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
