[package]
name = "plow-output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Output contract types for plow reports"
readme = "../../README.md"

[lib]
doctest = false

[dependencies]
plow-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
schema = ["dep:schemars", "plow-types/schema"]

[lints]
workspace = true
